# Trading_Polymarket_Framework

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  STRUCTURE_PROPOSAL.md  a2_detector.py  bot_score.py  config.py  data_audit.py  data_clients.py  gamma_sanity.py  main.py  microstructure.py  providers.py  pyproject.toml  run_screening_v1.py  run_v0.py  screening_engine.py  settings.py
docs/: README.md  RESEARCH_METHODOLOGY.md  STRUCTURE.md
scripts/: data_audit.py  diagnostics.py  research_engine.py  screening.py
src/: __init__.py
src/config/: settings.py
src/domain/: __init__.py  bot_score.py  screening.py
src/execution/: adapter.py
src/storage/: store.py
src/strategies/: __init__.py  a2_cascade.py  h1_informational.py
